# Learning_Repo

./: .gitignore  README.md
.github/workflows/: capstone-ci.yml
app-development/: README.md
app-development/backend-api-fastapi/: README.md  key_concepts.html  requirements.txt
app-development/full-stack-capstone-project/backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
app-development/full-stack-capstone-project/backend/airflow_dags/: housing_pipeline.py
app-development/full-stack-capstone-project/backend/app/: config.py  db.py  drift.py  explain.py  main.py  metrics.py  models_orm.py  schemas.py
app-development/full-stack-capstone-project/backend/app/serving/: base.py  direct.py  streaming.py
app-development/full-stack-capstone-project/backend/ml/: amplify.py  baseline_metrics.json  dataset.py  regression_gate.py  seed_data.py  train.py
app-development/full-stack-capstone-project/backend/spark/: Dockerfile  consumer.py
app-development/full-stack-capstone-project/backend/tests/: conftest.py
app-development/full-stack-capstone-project/backend/tests/chaos/: kill_broker.sh  kill_pod.sh
app-development/full-stack-capstone-project/backend/tests/integration/: test_api.py  test_contract.py  test_edge.py  test_metrics.py  test_seed.py  test_streaming.py
app-development/full-stack-capstone-project/backend/tests/load/: locustfile.py
app-development/full-stack-capstone-project/backend/tests/unit/: test_amplify.py  test_direct_predictor.py  test_schemas.py  test_train.py
data-engineering-at-scale/: README.md
game-development/: KEY_QUEST_IMPLEMENTATION.md  README.md
mlops-production-ml/: README.md
parallel-distributed-processing/: README.md
(+220 files in other folders)
