# Backend package config — dependencies, lint (ruff) and test (pytest) settings
# all live here so there is a single source of truth (no scattered config files).
[project]
name = "capstone-backend"
version = "0.1.0"
description = "Real-Time ML Platform - FastAPI gateway, training and serving code"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "mlflow>=2.16",
    "prometheus-fastapi-instrumentator>=7.0",
    "confluent-kafka>=2.6",
    "slowapi>=0.1.9",       # rate limiting (Tier C edge hardening)
    "evidently>=0.7",       # data drift detection (Tier C monitoring)
]

[dependency-groups]
# Dev-only tools: tests, lint, load testing. Installed with `uv sync`.
dev = [
    "pytest>=8.3",
    "httpx>=0.27",                    # TestClient transport for FastAPI
    "ruff>=0.6",
    "testcontainers[postgres,kafka]>=4.8",  # real Postgres/Kafka in Docker for tests
    "locust>=2.31",                   # load testing (Tier A baseline study)
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes basics, I = import sorting. Keep it simple.
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "integration" tests need Docker; run only unit tests with `pytest -m 'not integration'`
markers = [
    "integration: needs Docker (testcontainers)",
]
